UPDATE: newsletter overlapping with footer in mobile size fixed

--- a/app/style/_footer.scss
+++ b/app/style/_footer.scss
@@ -4,11 +4,7 @@ footer {
   min-height: 62vh;
 
   @include mobile-big {
-    padding-top: 10rem;
-  }
-
-  @include mobile {
-    padding-top: 35rem;
+    padding-top: 4rem;
   }
 
   .footer-content {
